Small tweak for SSA

--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -720,6 +720,9 @@ agencies:
   - date: 2025-02-20
     event: Several DOGE staffers at the agency are identified by Social Security Works (a nonprofit advocacy group)
     source: https://www.thehandbasket.co/p/leland-dudek-ssa-doge
+  - date: 2025-03-04
+    event: In a meeting, Dudek stresses again that DOGE will make mistakes and also admits "I am receiving decisions that are made without my input. I have to effectuate those decisions," suggesting DOGE is in charge.
+    source: https://www.washingtonpost.com/politics/2025/03/06/doge-is-driving-social-security-cuts-will-make-mistakes-acting-head-says-privately/
   systems:
   - name: Anti-Fraud Enterprise Solution
     acronym: AFES
