--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -541,6 +541,11 @@ agencies:
     - Derek Geissler
     - Nicole Hollander
     source: https://www.wired.com/story/doge-government-salaries-elon-musk/
+  - date: 2025-03-06
+    event: Thomas Shedd says in a statement that he expects TTS will be 50% smaller within weeks
+    named:
+    - Thomas Shedd
+    source: https://www.theatlantic.com/technology/archive/2025/03/gsa-chat-doge-ai/681987/
   - date: 2025-03-07
     event: DOGE rolls out a custom GSAi custom chatbot to 1500 workers
     source: https://www.wired.com/story/gsai-chatbot-1500-federal-workers/
