--- a/.github/actions/golf_scraper/action.yml
+++ b/.github/actions/golf_scraper/action.yml
@@ -1,3 +1,5 @@
+name: Golf Date Scraper
+description: "Scrape and commit golf trip dates"
 inputs:
   command:
     description: "Scrape golf trips from Factba.se"
