Fixing Adam Ramada's name

--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -179,7 +179,7 @@ agencies:
     event: Trump fires the Inspector General for the Department of Education in a late-night purge
     source: https://www.nytimes.com/interactive/2025/02/11/us/politics/trump-musk-doge-federal-workers.html
   - date: 2025-01-28
-    event: According to his sworn testimony, Alan Ramada started working at the Department of Education on this date. He says there is one other USDS staffer with him, two other detailees and two DOE staffers.
+    event: According to his sworn testimony, Adam Ramada started working at the Department of Education on this date. He says there is one other USDS staffer with him, two other detailees and two DOE staffers.
     named:
     - Adam Ramada
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277216/gov.uscourts.dcd.277216.16.1.pdf
