--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -277,6 +277,35 @@ agencies:
     description: "Basic IT including email and Microsoft 365"
     source: https://www.cnn.com/2025/02/06/climate/doge-energy-department-trump/index.html
 
+- name: Department of Government Efficiency Temporary Organization
+  acronym: DOGE TO
+  people:
+  - Elon Musk
+  events:
+  - date: 2025-01-20
+    event: An Inauguration Day executive order establishes the DOGE Temporary Organization within the USDS and staffed with 4-person teams in agencies for "implementing the president's DOGE agenda"
+    source: https://www.whitehouse.gov/presidential-actions/2025/01/establishing-and-implementing-the-presidents-department-of-government-efficiency/
+  - date: 2025-01-20
+    event: In another executive order, Trump declares a hiring freeze and that DOGE will work with OMB and OPM to submit a plan to reduce the size of the government within 90 days
+    source: https://www.whitehouse.gov/presidential-actions/2025/01/hiring-freeze/
+  - date: 2025-02-11
+    event: Trump issues an executive order giving DOGE teams in every agency final approval on any hiring decisions, sets quota of 1 new hire for 4 departures
+    source: https://www.whitehouse.gov/presidential-actions/2025/02/implementing-the-presidents-department-of-government-efficiency-workforce-optimization-initiative/
+  - date: 2025-02-26
+    event: Trump issues an executive order mandating that DOGE teams will have approval over awarding any contract at any agency and freezes purchase cards for 90 days
+    source: https://www.whitehouse.gov/presidential-actions/2025/02/implementing-the-presidents-department-of-government-efficiency-cost-efficiency-initiative/
+  - date: 2025-02-27
+    event: U.S. District Judge John Bates orders that some DOGE officials should be required to testify under oath
+    source: https://www.politico.com/news/2025/02/27/doge-depositions-union-lawsuits-00206542
+  - date: 2025-03-10
+    event: U.S. District Judge Christopher Cooper demands a rolling production of DOGE to produce documents in discovery within weeks
+    source: https://www.politico.com/news/2025/03/10/judge-orders-doge-record-release-00223151
+  - date: 2025-03-12
+    event: US District Judge Tanya Chutkan issues an order giving DOGE and Elon Musk three weeks to comply with document discovery requests about its staffing and downsizing plans for agencies
+    source: https://www.politico.com/news/2025/03/12/elon-musk-judge-orders-discovery-00227924
+    named:
+    - Elon Musk
+
 - name: Department of Homeland Security
   acronym: DHS
   people:
@@ -756,6 +785,17 @@ agencies:
     event: NIST workers witness a handful people they suspect of being DOGE at NIST IT facilities in Gaithersburg, MD
     source: https://www.wired.com/story/the-national-institute-of-standards-and-technology-braces-for-mass-firings/
 
+- name: National Security Agency
+  acronym: NSA
+  people:
+  - Elon Musk
+  events:
+  - date: 2025-03-12
+    event: Elon Musk visits the NSA to meet with its top administrator, General Timothy Haugh
+    named:
+    - Elon Musk
+    source: https://www.wsj.com/politics/national-security/elon-musk-made-secret-visit-to-u-s-spy-agency-9b0b64e2?mod=hp_lead_pos5
+
 - name: Occupational Safety and Health Administration
   acronym: OSHA
   systems:
@@ -1100,19 +1140,36 @@ agencies:
 
 - name: US Digital Service
   acronym: USDS
+  people:
+  - Elon Musk
+  - Amy Gleason
+  - Cole Killian
+  - Nikhil Rajpal
   events:
   - date: 2025-01-20
-    event: An Inaguration Day executive order renames the USDS to the US Doge Service and implants the DOGE temporary organization inside of It
-    source: link to EO
+    event: An Inauguration Day executive order renames the USDS to the US Doge Service and implants the DOGE temporary organization inside of It
+    source: https://www.whitehouse.gov/presidential-actions/2025/01/establishing-and-implementing-the-presidents-department-of-government-efficiency/
   - date: 2025-01-21
     event: DOGE staff start screening all USDS staff in interviews, asking them their views of DOGE and who were underperformers who should be fired.
     named:
     - Cole Killian
     - Nikhil Rajpal
     source: https://www.wired.com/story/elon-musk-digital-coup-doge-data-ai/
+  - date: 2025-02-16
+    event: Approximately 50 USDS staff are fired as part (removing approximately 1/3 of the USDS staff that predated DOGE)
+    source: https://www.linkedin.com/posts/jonathankamens_around-50-us-digital-service-employees-activity-7296541591333203969-VCs2/
+  - date: 2025-02-17
+    event: In a filing in "State of New Mexico v. Elon Musk," DOJ lawyers declare that Elon Musk is not the USDS Administrator, but just an advisor
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277463/gov.uscourts.dcd.277463.24.0_1.pdf
+  - date: 2025-02-24
+    event: In a hearing for "Alliance for Retired Americans v. Bessent," Judge Kollar-Kotelly repeatedly grills DOJ lawyers on who the USDS Administrator is
+    source: https://www.lawfaremedia.org/article/who-is-running-the-u.s.-doge-service
   - date: 2025-02-25
-    event: 21 USDS staff publicly resign in protest of DOGE's actions
+    event: 21 remaining USDS staff publicly resign in protest of DOGE's actions
     source: https://apnews.com/article/doge-elon-musk-federal-government-resignations-usds-6b7e9b7022e6d89d69305e9510f2a43c
+  - date: 2025-02-26
+    event: After days of sustained questioning about who the USDS Administrator is, the White House gives the name of Amy Gleason. It is unclear how long she had been in the role.
+    source: https://www.npr.org/2025/02/26/nx-s1-5310634/amy-gleason-doge-administrator
 
 - name: Veterans Affairs
   acronym: VA
